# treehacks-25

./: .prettierrc  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: app.py  pyproject.toml
backend/data/: invalid_domains.json
backend/groq/: groq_client.py
backend/groq_func/: groq_client.py
backend/routes/: groq_routes.py  scrape_routes.py
backend/scrape/: scraper.py
src/app/: layout.tsx  page.tsx
src/app/create/: layout.tsx  page.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Table/: Table.tsx
src/components/Textarea/: Textarea.tsx
src/utils/env/: env.ts
src/utils/supabase/: auth.ts  supabase.ts
